--- a/admin/templates/admin_base.html
+++ b/admin/templates/admin_base.html
@@ -21,13 +21,51 @@
         <script src="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/js/select2.min.js"></script>
     </head>
 
+    <style>
+        #flash_message {
+            position: absolute;
+            left: 50%;
+            z-index: 2;
+            transform: translateX(-50%);
+        }
+
+        #flash_message .alert {
+            text-align: center;
+            border-radius: 10px;
+        }
+    </style>
+
     {% block css %}
     {% endblock %}
 
     <body>
+        <!-- Flash Messages -->
+        <div id="flash_message" class="">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category, message in messages %}
+                            <div class="alert alert-{{ category }} shadow-sm border-0" role="alert">
+                                {{ message }}
+                            </div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+        </div>
+        <!-- End -->
+
         {% block content %}
         {% endblock %}
     </body>
+
+
+    <script>
+        $(document).ready(function(){
+            setTimeout(function () {
+                $("#flash_message .alert").alert("close");
+                $("#flash_message").hide(500);
+            }, 4000)
+        })
+    </script>
 
     {% block js %}
     {% endblock %}
