--- a/admin/templates/dashboard.html
+++ b/admin/templates/dashboard.html
@@ -1,19 +1,13 @@
-{% extends "base.html" %}
+{% extends "admin_main_base.html" %}
 
 {% block css %}
-<style>
-
-</style>
 {% endblock %}
 
 {% block content %}
 <div class="container">
-    <h1>Hello Admin</h1>
+    <h1>Welcome to Dashboard</h1>
 </div>
 {% endblock %}
 
 {% block js %}
-<script>
-
-</script>
 {% endblock %}
