--- a/admin/templates/login.html
+++ b/admin/templates/login.html
@@ -11,7 +11,7 @@
     <div class="d-flex flex-column pt-5 mt-5 align-items-center">
         <h2>Sign In</h2>
         <form class="col-md-5" method="POST">
-            <label>Username</label>
+            <label>Email</label>
             <input type="email" name="email" id="email" class="form-control mb-3">
             <label>Password</label>
             <input type="password" name="password" id="password" class="form-control">
