--- a/admin/templates/merchant/home.html
+++ b/admin/templates/merchant/home.html
@@ -11,13 +11,12 @@
     <div class="d-flex justify-content-between my-2">
         <h4 class="m-0">Merchant Details</h4>
     </div>
-
     <div class="">
         {% if merchants %}
         <table class="table text-center my-4">
             <tr>
-                <th>User Email</th>
-                <th>Name</th>
+                <th>Company Name</th>
+                <th>Merchant Email</th>
                 <th>Address</th>
                 <th>GST Number</th>
                 <th></th>
@@ -25,8 +24,8 @@
             {% for merchant in merchants %}
             <tr>
                 <td class="d-none id">{{ merchant.id }}</td>
-                <td>{{ merchant.user.email }}</td>
                 <td>{{ merchant.name }}</td>
+                <td>{{ merchant.user.email }}</td>
                 <td>{{ merchant.address }} {{ merchant.city }}, {{ merchant.state }}, {{ merchant.pin_code }}</td>
                 <td>{{ merchant.gst_number }}</td>
                 <td>
