--- a/merchant/templates/merchant_base.html
+++ b/merchant/templates/merchant_base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Employee Project</title>
+    <title>Tamani - Stock Keeper</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -27,7 +27,7 @@
 {% endblock %}
 <body>
     <nav class="navbar navbar-expand-lg bg-dark px-5 py-0">
-        <a class="navbar-brand" href="#">Stock Keeper</a>
+        <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='Tamani Logo.png') }}" style="height:70px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -52,7 +52,7 @@
               <div class="dropdown-menu" aria-labelledby="profile_dropdown">
                 <a class="dropdown-item" href="#">Your Profile</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Sign Out</a>
+                <a class="dropdown-item" href="{{ url_for('merchant.logout') }}">Sign Out</a>
               </div>
             </li>
             <li class="nav-item">
