--- a/admin/templates/delivery_person/home.html
+++ b/admin/templates/delivery_person/home.html
@@ -16,7 +16,7 @@
 <div class="container p-3 my-4">
     <div class="d-flex justify-content-between my-2">
         <h4 class="my-2">Delivery Person</h4>
-        <a href="{{ url_for('admin.add_delivery_person') }}" class='btn btn-outline-primary'><i class="fa fa-plus" aria-hidden="true"></i>&nbsp;&nbsp;Add Delivery Person</a>
+        <a href="{{ url_for('admin.add_delivery_person') }}" class='btn btn-outline-primary d-flex align-items-center'><i class="fa fa-plus" aria-hidden="true"></i>&nbsp;&nbsp;Add Delivery Person</a>
     </div>
 
     <div class="my-4">
