--- a/admin/templates/tenders/request.html
+++ b/admin/templates/tenders/request.html
@@ -83,8 +83,10 @@
                 {% endfor %}
             </div>
         {% else %}
-            <hr>
-            <h3 class="text-muted text-center">No Records Found</h3>
+        <div class="my-5 text-center">
+            <img src="{{ url_for('admin.static', filename='box.svg') }}" style="width: 100px; height: 100px;">
+            <h4 class="my-3" style="font-size: 20px;">No Records Found</h4>
+        </div>
         {% endif %}
     </div>
 
