--- a/merchant/templates/drafts.html
+++ b/merchant/templates/drafts.html
@@ -46,7 +46,7 @@
                             <div>
                                 Tender #{{tender[0]}} 
                             </div>
-                            <p class="mb-0">Created On - {{tender[1].created_on.strftime("%d %b %Y")}} </p>
+                            <p class="mb-0">Created On - {{tender[1].created_on.strftime("%d %b %Y %I:%M %p")}} </p>
                         </a>
                     </div> 
                     <div id="collapse_{{tender[1].id}}" class="collapse" data-parent="#accordion">
