--- a/merchant/templates/tenders.html
+++ b/merchant/templates/tenders.html
@@ -10,7 +10,6 @@
     .product_name{
         font-size: 15px;
     }
-    
 </style>
 {% endblock %}
 {% block content %}
@@ -24,7 +23,7 @@
                             <div>
                                 Tender #{{tender[0]}} 
                             </div>
-                            <p class="mb-0">{{tender[1].status}} On - {{tender[1].status_updated_on.strftime("%d %b %Y")}} </p>
+                            <p class="mb-0">{{tender[1].status}} On - {{tender[1].status_updated_on.strftime("%d %b %Y %I:%M %p")}} </p>
                         </a>
                     </div> 
                     <div id="collapse_{{tender[1].id}}" class="collapse" data-parent="#accordion">
