--- a/admin/templates/admin_main_base.html
+++ b/admin/templates/admin_main_base.html
@@ -105,7 +105,7 @@
         <div class="d-flex">
             <div class="">
                 <div id="mySidenav" class="sidenav">
-                    <h2><img src="{{ url_for('static', filename='Tamani Logo.png') }}"></h2>
+                    <a href="{{ url_for('admin.dashboard') }}"><img src="{{ url_for('static', filename='Tamani Logo.png') }}"></a>
                     <h5 class="px-2 my-4" style="font-size: 28px;"><i class="fa fa-user-o pr-2 user_icon" aria-hidden="true">&nbsp;{{ current_user.name }}</i></h5>
                     <a href="{{ url_for('admin.dashboard') }}"><i class="fa fa-desktop pr-2" aria-hidden="true"></i>Dashboard</a>
                     
