--- a/merchant/templates/merchant_dashboard.html
+++ b/merchant/templates/merchant_dashboard.html
@@ -14,8 +14,8 @@
 {% block content%}
 <div>
     <span id="merchant_home_url" class="d-none">{{url_for('merchant.merchant_home', category_id=0 )}}</span>
-    <div class="d-flex justify-content-end">
-        <select class="form-control m-3 col-md-2" id="category">
+    <div class="d-flex justify-content-end px-4">
+        <select class="form-control border-0 shadow my-3 mx-4 col-md-2" id="category">
             <option value="0">--All Categories--</option>
             {% for category in categories %}
                 {% if category.id == selected_category %}
@@ -28,11 +28,15 @@
     </div>
     <div class="d-flex flex-wrap px-4 justify-content-around">
         {% for product in products %}
-        <div class="col-md-2 border p-4 mx-4 my-3">
+        <div class="col-md-2 shadow px-3 py-4 mx-4 my-3">
             <div class=" text-center">
             <img src="{{ url_for('static', filename='product_images/'+product.image) }}" class=" product_img">
             </div>
-            <p class="product_name pt-2 mb-0">{{product.name}}</p>
+            {% if len(product.name) > 50 %}
+                <p class="product_name pt-2 mb-0" title="{{product.name}}">{{product.name[:50]}}...</p>
+            {% else %}
+                <p class="product_name pt-2 mb-0" title="{{product.name}}">{{product.name}}</p>
+            {% endif %}
             {% if product.specifications %}
             <p class="small text-muted mb-2">{{product.specifications}}</p>
             {% endif %}
