--- a/merchant/templates/requests.html
+++ b/merchant/templates/requests.html
@@ -26,7 +26,7 @@
                             <div>
                                 Tender #{{tender[0]}} 
                             </div>
-                            <p class="mb-0">{{tender[1].status}} On - {{tender[1].status_updated_on.strftime("%d %b %Y")}} </p>
+                            <p class="mb-0">{{tender[1].status}} On - {{tender[1].status_updated_on.strftime("%d %b %Y %I:%M %p")}} </p>
                         </a>
                     </div> 
                     <div id="collapse_{{tender[1].id}}" class="collapse" data-parent="#accordion">
@@ -123,6 +123,8 @@
             let id=Number($(this).attr("id").split("_")[1]);
             delete_tender(id)
         });
+        
     });
+
 </script>
 {% endblock %}
