--- a/admin/templates/merchant/tenders.html
+++ b/admin/templates/merchant/tenders.html
@@ -24,12 +24,12 @@
         {% if tenders %}
             <div id="accordion" class="my-3">
                 {% for tender in tenders %}
-                <div class="card my-3">
-                    <div class="card-header">
-                        <a class="card-link d-flex justify-content-between" data-toggle="collapse" href="#collapse_{{tender[1].id}}">
-                            <div>
+                <div class="card border-0 shadow my-3">
+                    <div class="px-3 py-2">
+                        <a class="card-link mt-2 d-flex justify-content-between" data-toggle="collapse" href="#collapse_{{tender[1].id}}">
+                            <h5>
                                 Tender #{{tender[0]}}  &nbsp;&nbsp;( Requested By {{ tender[1].user.merchants.first().name }} ) 
-                            </div>
+                            </h5>
                             {% if tender[1].status=="Assigned" %}
                                 <p class="mb-0">{{tender[1].status}} To {{ tender[1].pickup.first().user.name }} On - {{tender[1].status_updated_on.strftime("%d %b %Y %I:%M %p")}} </p>
                             {% else %}
@@ -263,7 +263,7 @@
             let return_tender_block = $("#collapse_"+id).find(".return_tender_block");
             let confirmation_msg = $("<p class='mb-2'>Are you sure, you want to return this tender?<p>\
             <button id='cancle_return_tender_"+id+"' class='btn btn-outline-secondary cancle_return_tender mx-2'>No</button>\
-            <button id='approve_"+id+"' class='btn btn-success mx-2 approve'>Yes</button>\
+            <button id='return_"+id+"' class='btn btn-success mx-2 return'>Yes</button>\
             ");
             $(return_tender_block).html(confirmation_msg);
             $("#collapse_"+id).find(".reject_block").addClass("d-none")
@@ -290,7 +290,7 @@
             });
         }
 
-        $(document).on("click",".approve", function(){
+        $(document).on("click",".return", function(){
             let id=Number($(this).attr("id").split("_")[1]);
             // console.log("Return-->",id);
             return_tender(id)
