--- a/admin/templates/tenders/approved.html
+++ b/admin/templates/tenders/approved.html
@@ -24,12 +24,12 @@
         {% if tenders %}
             <div id="accordion" class="my-3">
                 {% for tender in tenders %}
-                <div class="card my-3">
-                    <div class="card-header">
-                        <a class="card-link d-flex justify-content-between" data-toggle="collapse" href="#collapse_{{tender[1].id}}">
-                            <div>
+                <div class="card border-0 shadow my-3">
+                    <div class="px-3 py-2">
+                        <a class="card-link mt-2 d-flex justify-content-between" data-toggle="collapse" href="#collapse_{{tender[1].id}}">
+                            <h5>
                                 Tender #{{tender[0]}}  &nbsp;&nbsp;( Requested By {{ tender[1].user.merchants.first().name }} ) 
-                            </div>
+                            </h5>
                             {% if tender[1].status=="Assigned" %}
                                 <p class="mb-0">{{tender[1].status}} To {{ tender[1].pickup.first().user.name }} On - {{tender[1].status_updated_on.strftime("%d %b %Y %I:%M %p")}} </p>
                             {% else %}
