--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,7 @@
 {% block content%}
     <div class="d-flex flex-column pt-5 mt-5 align-items-center">
         <h2>Sign In</h2>
+        <p class="small mb-0">To Merchant Account</p>
         <form action="" class="col-md-3" method="POST">
             <label>Email</label>
             <input type="text" name="email" id="email" class="form-control mb-3">
