--- a/merchant/templates/drafts.html
+++ b/merchant/templates/drafts.html
@@ -40,12 +40,12 @@
         {% if tender_drafts %}
             <div id="accordion" class="my-3">
                 {% for tender in tender_drafts %}
-                <div class="card my-3">
-                    <div class="card-header">
-                        <a class="card-link d-flex justify-content-between" data-toggle="collapse" href="#collapse_{{tender[1].id}}">
-                            <div>
+                <div class="card border-0 shadow my-3">
+                    <div class="px-3 py-2">
+                        <a class="card-link mt-2 d-flex justify-content-between" data-toggle="collapse" href="#collapse_{{tender[1].id}}">
+                            <h5>
                                 Tender #{{tender[0]}} 
-                            </div>
+                            </h5>
                             <p class="mb-0">Created On - {{tender[1].created_on.strftime("%d %b %Y %I:%M %p")}} </p>
                         </a>
                     </div> 
